# gladier

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml  python-package.yml
docs/: clients_and_tools.rst  conf.py  examples.rst  gladier_client.rst  gladier_tools.rst  glossary.rst  index.rst  infrastructure.rst  installation.rst  migration.rst  requirements.txt
docs/clients/: index.rst
docs/examples/: eandt.py  encrypt_and_transfer.py  encrypt_and_transfer.rst  tandt.py  tar_and_transfer.py  tar_and_transfer.rst
docs/flow_generation/: fs_list_flow.json
docs/gladier/: a.out  client.rst  custom_auth.rst  custom_login.py  custom_tools.rst  example_client.py  example_tool.py  flow_generation.rst  getting_started.rst  hello_world_tool.py  installation.rst  overview.rst  passing_payloads.py  passing_payloads.rst  running_flows.rst  sdk_reference.rst  setup.rst  test.c  tools.rst
docs/gladier/flow_generation/: fs_list_example.py  fs_list_flow.json
docs/gladier/sdk_reference/: flows_manager.rst  gladier.rst  index.rst
docs/gladier/sdk_reference/state_api/: builtins.rst  compute.rst  index.rst  search.rst  transfer.rst
docs/gladier/static/: .gitattributes
docs/gladier_tools/: index.rst
docs/gladier_tools/globus/: index.rst  transfer.rst
docs/gladier_tools/posix/: asymmetric_decrypt.rst  asymmetric_encrypt.rst  encrypt.rst  https_download_file.rst  index.rst  shell_cmd.rst  tar.rst
docs/gladier_tools/publish/: index.rst  publish.rst  publishv2.rst
docs/tools/: example_client.py  gladier_example.py  index.rst
docs/tools/hello_world/: exceptions.rst  hello_world.rst  hello_world_conversation.py  hello_world_example.py  hello_world_exception.py  index.rst  multi_flow_tool.rst
docs/tools/manifest/: creating_manifests.rst  index.rst  manifest_to_funcx_tasks.rst  manifest_to_funcx_tasks_example.py  manifest_transfer.rst  manifest_transfer_example.py
docs/tools/posix/: decrypt.rst  index.rst  tar.rst  untar.rst
examples/: random_branching.py
gladier/: __init__.py  automate.py  base.py  client.py  config.py  decorators.py  defaults.py  exc.py  flow.py  flows_helpers.py  helpers.py  iterators.py  state_models.py  version.py
gladier/examples/hello_world/: defaults.py
gladier/flow_builder/: compute.py  flow.py  registry.py
gladier/managers/: __init__.py  compute_login_manager.py  compute_manager.py  flows_manager.py  funcx_manager.py  login_manager.py  service_manager.py
gladier/storage/: config.py  migrations.py  serialization.py  tokens.py
gladier/tests/: __init__.py  conftest.py  integration_hello_world.py  test_builtin_tools.py  test_client.py  test_client_auth.py  test_client_flow_generation.py  test_client_flows.py  test_client_registration.py  test_flow_generation.py  test_flow_modifiers.py  test_flow_traversal.py  test_flows_manager.py  test_globus_state_models.py  test_iterators.py  test_login_manager.py  test_migrations.py  test_state_models.py  test_tool_flow_generation.py  test_tools.py  test_utilities.py
gladier/tests/test_data/: gladier_mocks.py  two_step_flow.json
gladier/tools/: __init__.py  dials.py  dials_plotting.py  helpers.py
gladier/tools/builtins/: __init__.py  action.py  choice_state.py  expression_eval.py  fail.py  pass_state.py  succeed.py  wait.py
gladier/tools/dials/: beam_sweep.py  funcx_functions.py  sweep.json
gladier/tools/dials/tests/: schema.json  test_funcx_functions.py
gladier/tools/globus/: __init__.py  compute.py  search.py  transfer.py
gladier/tools/hello_world/: __init__.py  defaults.py  funcx_functions.py  hello_conversation.py  hello_exception.py  hello_world.py
gladier/tools/manifest/: README.rst  __init__.py  create_manifest.py  defaults.py  funcx_functions.py  manifest_create.py
gladier/tools/posix/: __init__.py  shell_cmd.py
gladier/tools/tests/: dials.json  test_dials.py
gladier/utils/: automate.py  config_migrations.py  dynamic_imports.py  flow_compiler.py  flow_generation.py  flow_modifiers.py  flow_traversal.py  funcx.py  funcx_login_manager.py  jupyter_tools.py  name_generation.py  pydantic_v1.py  tool_alias.py  tool_chain.py
