[tool.poetry]
name = "gladier"
version = "0.8.4"
description = "Tooling for rapid deployment of automation tooling."
authors = [
        "Nickolaus Saint <nick@globus.org>",
        "Rafael Vescovi <ravescovi@anl.gov>",
        "Ryan Chard <rchard@anl.gov>",
        "Jim Pruyne <pruyne@uchicago.edu>"
        ]
readme = "README.rst"
license = "Apache 2.0"
homepage = "https://github.com/globus-gladier/gladier"
repository = "https://github.com/globus-gladier/gladier"
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: POSIX",
        "Operating System :: MacOS :: MacOS X",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11"
        ]


[tool.poetry.dependencies]
python = "^3.7"
funcx = ">=1.0.2, <2.0.0"
globus-automate-client = ">=0.13,<0.17"
packaging = ">=21.3"
fair-research-login = ">=0.2.6"
pydantic = "^1"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-cov = "^4"

[tool.poetry.group.dev.dependencies]
importmagic = "^0.1"
epc = "^0"
isort = "^5.10"
python-lsp-server = "^1"
pylsp-mypy = "^0"
pyls-isort = "^0"
python-lsp-black = "^1"
pylsp-rope = "^0"
python-lsp-ruff = "^1"

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"
src_paths = ["gladier"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
